# BOOTLOADER_PLCJS_ETH_MODULE_12DI_D4MG_STM32F407VGT6

./: .gitignore  CMakeLists.txt  README.md  README_RU.md  STM32F407XX_FLASH.ld  arm-none-eabi-toolchain.cmake
Application/boot/: boot_entry.c  boot_entry.h  boot_jump.c  boot_jump.h  boot_main.c  boot_main.h  boot_state.h
Application/crc/: crc32.c  crc32.h
Application/flash/: flash_if.c  flash_if.h  flash_map.h  metadata.c  metadata.h
Application/installer/: fw_installer.c  fw_installer.h
Application/led/: led_indication.c  led_indication.h
Application/modbus/: fw_update_proto.c  fw_update_proto.h  modbus_boot_server.c  modbus_boot_server.h
Application/validate/: app_validate.c  app_validate.h
Core/Inc/: gpio.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: gpio.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
DOC/: MAIN_APP_LINKER_CHANGES.md  TECHNICAL_SPECIFICATION.txt
FW_UTIL_PROG_SPEC/: README.md  README_RU.md
LWIP/App/: lwip.c  lwip.h  sys_arch.c
tools/: fw_update.mjs  fw_update.py
